compiler/test-data/parser/expressions/errors/unclosed_string.frel
module test

blueprint Bad {
    x : String = "hello
}
